doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132
-source
11
-classpath
C:\Program Files\Greenfoot\lib\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.3.7.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\Greenfoot\lib\wellbehavedfx-0.3.3.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132
-d
C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc
-encoding
windows-1252
-charset
windows-1252
-doctitle
hungry-animal-AlexLi132
-windowtitle
hungry-animal-AlexLi132
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132/Elephant.java
C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132/MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\Elephant.java...
Loading source file C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\MyWorld.java...
Constructing Javadoc information...
warning: unknown enum constant Tag.Any
  reason: class file for threadchecker.Tag not found
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\Elephant.java.java:9: error: class Elephant is public, should be declared in a file named Elephant.java
public class Elephant extends Actor
       ^
Standard Doclet version 11.0.14.1
Building tree for all the packages and classes...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\Elephant.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\MyWorld.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\package-summary.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\package-tree.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\constant-values.html...
Building index for all the packages and classes...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\overview-tree.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\index-all.html...
Building index for all classes...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\allclasses-index.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\allpackages-index.html...
Building index for all classes...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\allclasses.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\allclasses.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\index.html...
Generating C:\Users\Owner\Documents\GitHub\New folder\hungry-animal-AlexLi132\doc\help-doc.html...
1 error
4 warnings
